Fix path import error
"Files in the public directory are served at the root path"

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "PixelGameFont";
-	src: url("/public/fonts/PixelGameFont.ttf");
+	src: url("/fonts/PixelGameFont.ttf");
 }
 
 body {
